--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,7 +18,7 @@ jobs:
          node-version: 16
 
      - name: Install dependecies
-       run: npm Install
+       run: npm install
 
      - name: Run tests
        run: npm test
